@@ -1,26 +1,26 @@
 # Reference
+
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
 ## Table of Contents
 
-**Classes**
+### Classes
 
 * [`compliance_markup`](#compliance_markup): The compliance markup helper class
 
-**Defined types**
+### Defined types
 
 * [`compliance_markup::map`](#compliance_markupmap): A wrapper to ensure that the mapper is called during the appropriate
 
-**Functions**
+### Functions
 
 * [`compliance_markup::compliance_map`](#compliance_markupcompliance_map): Provides a mechanism for mapping compliance data to settings in Puppet
 * [`compliance_markup::enforcement`](#compliance_markupenforcement): Hiera entry point for the SIMP Compliance Engine  To activate this hiera backend, add the following to your `hiera.yaml`:  ```yaml --- versio
 * [`compliance_markup::loaded_maps`](#compliance_markuploaded_maps): Returns the compliance data keys from the loaded compliance maps
-* [`compliance_markup::telemetry`](#compliance_markuptelemetry): 
 
 ## Classes
 
-### compliance_markup
+### `compliance_markup`
 
 This class should be included *after* all other classes in your site so that
 the mapper can properly analyze the standing catalog.
@@ -43,7 +43,7 @@ Data type: `Optional[Array[String[1]]]`
 
 Compliance profiles that you wish to validate against
 
-Default value: `undef`
+Default value: ``undef``
 
 ##### `report_types`
 
@@ -69,7 +69,7 @@ The types of entries that you want to report on
 
 * This is ignored if ``options`` is specified
 
-Default value: ['non_compliant', 'unknown_parameters', 'custom_entries']
+Default value: `['non_compliant', 'unknown_parameters', 'custom_entries']`
 
 ##### `report_format`
 
@@ -77,7 +77,7 @@ Data type: `Enum['json','yaml']`
 
 The output format for the report
 
-Default value: 'json'
+Default value: `'json'`
 
 ##### `report_on_client`
 
@@ -88,7 +88,7 @@ Save a copy of the report on the client as a ``File`` resource
 * This will make the report show up in PuppetDB but may also expose
   unwanted vulnerability information
 
-Default value: `false`
+Default value: ``false``
 
 ##### `report_on_server`
 
@@ -96,7 +96,7 @@ Data type: `Boolean`
 
 Save a copy of the report on the puppet server
 
-Default value: `true`
+Default value: ``true``
 
 ##### `server_report_dir`
 
@@ -110,15 +110,19 @@ The path where the server should store reports
   sees it:
   ``/opt/puppetlabs/server/data/puppetserver/simp/compliance_reports``
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `custom_report_entries`
+##### `custom_report_data`
+
+Data type: `Optional[Hash]`
 
 A hash that will be included in the compliance report under the heading
 ``site_data``
 
 * This can be used for adding *anything* to the compliance report. The hash
   is simply processed with ``to_yaml``
+
+Default value: ``undef``
 
 ##### `options`
 
@@ -128,26 +132,15 @@ The options to pass directly to the `compliance_markup::compliance_map` validati
 
 * If specified, various other options may be ignored
 
-Default value: `undef`
-
-##### `custom_report_data`
-
-Data type: `Optional[Hash]`
-
-
-
-Default value: `undef`
+Default value: ``undef``
 
 ## Defined types
 
-### compliance_markup::map
+### `compliance_markup::map`
 
 phase of the catalog compile.
 
 Defines appear to be run after all classes
-
-The options hash is passed directly to the
-`compliance_markup::compliance_map()` function
 
 #### Parameters
 
@@ -155,15 +148,15 @@ The following parameters are available in the `compliance_markup::map` defined t
 
 ##### `options`
 
-Data type: `Any`
+Data type: `Hash`
 
+The options hash is passed directly to the `compliance_markup::compliance_map()` function
 
-
-Default value: {}
+Default value: `{}`
 
 ## Functions
 
-### compliance_markup::compliance_map
+### `compliance_markup::compliance_map`
 
 Type: Ruby 4.x API
 
@@ -342,39 +335,39 @@ Puppet::Functions.create_function(:'compliance_markup::compliance_map') do
 
 The compliance_markup::compliance_map function.
 
-Returns: `Any`
+Returns: `Nil`
 
 ##### `map_data`
 
 Data type: `Hash`
 
-
+The full Hash of mapping data
 
 #### `compliance_markup::compliance_map(Variant[String[1], Array[String[1]]] $compliance_profile, Variant[String[1], Array[String[1]]] $identifiers, Optional[String[1]] $notes)`
 
 The compliance_markup::compliance_map function.
 
-Returns: `Any`
+Returns: `Nil`
 
 ##### `compliance_profile`
 
 Data type: `Variant[String[1], Array[String[1]]]`
 
-
+Denotes the compliance profile(s) to which you are mapping
 
 ##### `identifiers`
 
 Data type: `Variant[String[1], Array[String[1]]]`
 
-
+A unique identifier for the policy to which you are mapping
 
 ##### `notes`
 
 Data type: `Optional[String[1]]`
 
+Allows for arbitrary notes to include in the compliance report
 
-
-### compliance_markup::enforcement
+### `compliance_markup::enforcement`
 
 Type: Ruby 4.x API
 
@@ -466,7 +459,7 @@ Data type: `Puppet::LookupContext`
 
 The context in which the Hiera backend is being called
 
-### compliance_markup::loaded_maps
+### `compliance_markup::loaded_maps`
 
 Type: Ruby 4.x API
 
@@ -476,23 +469,5 @@ Returns the compliance data keys from the loaded compliance maps
 
 Returns the compliance data keys from the loaded compliance maps
 
-Returns: `Any`
-
-### compliance_markup::telemetry
-
-Type: Ruby 4.x API
-
-The compliance_markup::telemetry function.
-
-#### `compliance_markup::telemetry(String $key)`
-
-The compliance_markup::telemetry function.
-
-Returns: `Any`
-
-##### `key`
-
-Data type: `String`
-
-
+Returns: `Nil`
 
